CSS MailTo Bttn Fix on wrap cont.

--- a/css/main.css
+++ b/css/main.css
@@ -246,8 +246,9 @@ a:hover {
     }
 
 .positionsButton {
+    display: inline-block;
     padding: 10px 16px;
-    margin-left:10px;
+    margin-left: 0.5em;
     background: #118ACB;
     border-radius: 8px; 
     -moz-border-radius: 8px; 
